update css style

--- a/src/styles/app.styl
+++ b/src/styles/app.styl
@@ -93,3 +93,78 @@ menu {
 
  .desktop-only
     display inline
+.cc-theme-edgeless
+  background-color var(--app-rddl-green)
+
+
+.cc-theme-edgeless span, .cc-theme-edgeless .about
+  color var(--app-rddl-blue)
+
+.cc-link
+  opacity  1 !important
+
+.cc-theme-edgeless a.cc-dismiss
+  color var(--app-rddl-green)
+  background-color var(--app-rddl-blue)
+
+.tm-page-main
+  background-color var(--app-rddl-grey)
+
+.tm-page-main .tm-li-dt,
+.tm-page-main .tm-li-dd
+    color black
+
+input, td,
+.tm-li-container,
+.tm-page-main .tm-li-label .tm-li-title
+  color black !important
+  font-family 'Helvetica Neue LT Pro'
+
+.tm-li.tm-li-link.router-link-exact-active,
+.tm-li.tm-li-link.router-link-exact-active .tm-li-title
+  background-color var(--app-rddl-green)
+  color var(--app-rddl-blue)
+
+.tm-li-label .tm-li-subtitle
+    color var(--app-rddl-blue) !important
+    font-weight: bold
+
+.tm-li
+  border-bottom 1px solid var(--bc-dim)
+.tm-part-title
+  color var(--app-rddl-green)
+  font-weight bold !important
+
+.tm-li.router-link-exact-active:before
+  background var(--app-rddl-blue)
+
+.tm-li.router-link-exact-active .tm-li-icon i.material-icons
+    color var(--app-rddl-blue) 
+
+.tm-tool-bar-container a:hover
+  color var(--app-rddl-green)
+
+.tm-page-main .material-icons
+  color var(--app-rddl-blue) !important
+
+.tm-page-main .tm-li-label .tm-li-title
+  font-family 'Space Mono'
+
+.BlocksTable td
+  border-bottom 1px solid var(--bc-dim) !important
+  padding: .8rem 1rem !important
+
+.app-menu-main .tm-li.tm-li-link:hover
+  background: var(--app-rddl-green);
+
+.app-menu-main .tm-li.tm-li-link:hover .tm-li-title
+  color var(--app-rddl-blue) 
+
+.tm-li-link
+   transition 0.3s
+
+.tm-btn .tm-btn__container
+  background var(--app-rddl-green)
+  border-color var(--app-rddl-green)
+  & .tm-btn__value
+    color var(--app-rddl-blue)
