--- a/src/styles/variables.styl
+++ b/src/styles/variables.styl
@@ -1,6 +1,9 @@
 :root
   // change for dark/light themes
-  --app-fg hsl(233, 43%, 12%)
+  --app-fg #6600FF
+  --app-rddl-blue #6600FF
+  --app-rddl-grey #f2f2f2
+  --app-rddl-green #15EA15
   --app-bg hsl(233, 37%, 20%)
   --app-bg-light hsl(233, 40%, 14%)
   --app-bg-alpha hsla(237, 18%, 20%, 95%)
@@ -10,7 +13,7 @@
   --bc-dim hsl(233, 33%, 16%)
   --bc-light hsl(233, 37%, 22%)
   --box-shadow hsla(0,0,0,0.2)
-  --hover-bg hsla(233, 88%, 90%, 0.2)
+  --hover-bg rgba(21, 234, 21, 0.8)
   --input-bc hsl(233, 22%, 33%)
   --input-bc-hover hsl(233, 22%, 40%)
 
@@ -20,7 +23,7 @@
   --accent-alpha hsla(279, 92%, 58%, 0.5)
   --primary hsl(233, 88%, 57%)
   --primary-bc hsl(233, 88%, 43%)
-  --link hsl(233, 88%, 82%)
+  --link #6600FF
   --hover hsl(233, 88%, 67%)
 
   // don't change
