--- a/src/styles/app.styl
+++ b/src/styles/app.styl
@@ -90,7 +90,7 @@ menu {
   #app-content
     display flex
     min-width 0
-
+    overflow auto
  .desktop-only
     display inline
 .cc-theme-edgeless
