update font and background

--- a/src/styles/app.styl
+++ b/src/styles/app.styl
@@ -96,6 +96,11 @@ menu {
 .cc-theme-edgeless
   background-color var(--app-rddl-green)
 
+.tm-page-header-container
+  background-color #a060ff
+
+.tm-tool-bar  .tm-tool-bar-container .main a
+  color white
 
 .cc-theme-edgeless span, .cc-theme-edgeless .about
   color var(--app-rddl-blue)
