--- a/src/styles/app.styl
+++ b/src/styles/app.styl
@@ -97,7 +97,7 @@ menu {
   background-color var(--app-rddl-green)
 
 .tm-page-header-container
-  background-color #a060ff
+  background-color #6600FF
 
 .tm-tool-bar  .tm-tool-bar-container .main a
   color white
@@ -124,6 +124,11 @@ input, td,
 .tm-page-main .tm-li-label .tm-li-title
   color black !important
   font-family 'Helvetica Neue LT Pro'
+
+.tm-part-header-container .tm-part-title.h5,
+.BlocksTable thead th
+  font-family 'Helvetica Neue LT Pro'
+  font-size: 15px
 
 .tm-li.tm-li-link.router-link-exact-active,
 .tm-li.tm-li-link.router-link-exact-active .tm-li-title
